welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:-6: error: not found: value haveBaggle
			if (haveBaggle()) 
                            ^Program:3: error: not found: value vuBiscuit
	while(vuBiscuit=="faux")
              ^