welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBAggle(){
	var k =0
	while(vuBiscuit=="faux")
	{
		avance()
		k=k+1
	}
	return k
}
